Update cassandra tip

--- a/README_c47c7c7383225ab55ff591cb59c41e6b.html
+++ b/README_c47c7c7383225ab55ff591cb59c41e6b.html
@@ -10,25 +10,29 @@
 </head>
 <body>
 <h1>Cassandra Tip</h1>
-<h1>Add JBoss in Eclipse</h1>
+<div class='_mk'><!-- edit --></div>
+<h1>Removing aNode</h1>
 <ol>
-<li>Install JBoss plugin for Eclipse</li>
-<li>In Eclipse: Window -&gt; Show View -&gt; Servers</li>
-<li>In Servers: Right click -&gt; New -&gt; Server</li>
-<li>Add server runtime environment</li>
+<li>Node status
+  <code>notetool status</code></li>
+<li>Decommission a Node
+  <code>nodetool -h 192.168.1.85 -p 7199 decommission</code></li>
+</ol>
+</body>
+</html>
+
 <li>Set JRE for server runtime environment</li>
 </ol>
 <h1>Removing aNode</h1>
 <ol>
-<li>Node status</li>
+<li>Node status
+  <code>notetool status</code></li>
+<li>Decommission a Node</li>
 </ol>
-<div class='_mk'><!-- edit --><p><code>notetool status</code></div>
-2. Decommission a Node
-<code>nodetool -h 192.168.1.85 -p 7199 decommission</code></p>
+<div class='_mk'><!-- edit -->  <p><code>nodetool -h 192.168.1.85 -p 7199 decommission</code></p></div>
 </body>
 </html>
-body>
-</html>
+ml>
 moving aNode</h1>
 <div class='_mk'><!-- edit --><p><code>nodetool -h 192.168.1.85 -p 7199 decommission</code></p></div>
 </body>
